# tdd_study

./: .gitignore  README.md
money/: CMakeLists.txt  README.md  test_case.cpp
money/include/: bank.h  dollar.h  expression.h  franc.h  money.h  pair.h  sum.h
money/src/: bank.cpp  dollar.cpp  expression.cpp  franc.cpp  money.cpp  pair.cpp  sum.cpp
xunit/: CMakeLists.txt  README.md  test_case.py  testcase.py  testcase_test.py  testresult.py  testsuite.py  wasrun.py
